--- a/admin/assets/css/mystyle.css
+++ b/admin/assets/css/mystyle.css
@@ -11244,3 +11244,31 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+/* .skeleton {
+  animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.title_load {
+  color:black;
+  width: 100%;
+  height: .5rem;
+  margin-bottom: .25rem;
+  border-radius: .125rem;
+}
+
+.title_load:last-child {
+  width: 80%;
+  margin-bottom: 0;
+}
+
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(200, 20%, 70%);
+  }
+
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+} */
