--- a/admin/assets/css/mystyle.css
+++ b/admin/assets/css/mystyle.css
@@ -11245,6 +11245,10 @@ body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
 
+.required {
+  color: red;
+}
+
 /* .skeleton {
   animation: skeleton-loading 1s linear infinite alternate;
 }
@@ -11272,3 +11276,49 @@ body.sidebar-toggled footer.sticky-footer {
     background-color: hsl(200, 20%, 95%);
   }
 } */
+
+/*--------------------------------------------------------------
+# Preloader
+--------------------------------------------------------------*/
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  overflow: hidden;
+  background: #fff;
+}
+
+#preloader:before {
+  content: "";
+  position: fixed;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  border: 8px solid #4e73df;
+  border-top-color: #352ce11f;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: animate-preloader 1s linear infinite;
+  animation: animate-preloader 1s linear infinite;
+}
+
+@-webkit-keyframes animate-preloader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes animate-preloader {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
