--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1341,19 +1341,6 @@ section {
   padding-top: 15px;
 }
 
-/* .sidebar {
-  position: -webkit-sticky;
-  position: -moz-sticky;
-  position: -ms-sticky;
-  position: -o-sticky;
-  position: sticky;
-  height: 300px;
-  padding: 30px 0;
-  color: #fff;
-  top: 10px;
-  bottom: auto;
-} */
-
 .test .row {
   background: #f8f9fa;
   margin-top: 30px;
@@ -1381,6 +1368,23 @@ section {
 .test .blog-entry-content {
   padding: 0 20px;
 }
+.testimonial-content {
+  height: 620px; 
+  overflow-y: auto; 
+  padding: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
