--- a/admin/assets/css/mystyle.css
+++ b/admin/assets/css/mystyle.css
@@ -11278,6 +11278,85 @@ body.sidebar-toggled footer.sticky-footer {
 } */
 
 /*--------------------------------------------------------------
+# Hero Images Slides
+--------------------------------------------------------------*/
+.heroSwiper .swiper-slide .banner-wrap {
+  display: block;
+  position: relative;
+  height: 605px;
+  max-height: 95vh;
+  width: 100%;
+  background: #f1f1f1;
+  overflow: hidden;
+}
+
+.heroSwiper .swiper-slide .banner-wrap img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: contrast(0.5);
+}
+
+.heroSwiper .swiper-slide .content {
+  max-width: 1500px;
+  width: 90%;
+  height: 100%;
+}
+
+.heroSwiper .swiper-slide .content .inner {
+  position: absolute;
+  height: 100%;
+  right: 0;
+  width: 100%;
+} 
+
+.heroSwiper .swiper-slide .content .text-content {
+  position: absolute;
+  left: 30%;
+  max-width: 700px;
+  transform: translate(-60%, -200%);
+  text-align: left;
+  color: white;
+}
+
+/* .heroSwiper .swiper-slide .content .text-contents {
+  position: absolute;
+  left: 15%;
+  max-width: 700px;
+  transform: translate(-60%, -300%);
+  text-align: left;
+  color: white;
+} */
+
+
+/* .heroSwiper .swiper-slide .updateBtnContainer {
+  position: absolute;
+  right: 30%;
+  transform: translate(300%, -1490%);
+  color: white;
+  max-width: 700px;
+} */
+
+.banner-wrap .btn-get-started {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  letter-spacing: 1px;
+  display: inline-block;
+  transition: 0.5s;
+  margin-left: -10px;
+  padding: 8px 26px 8px 26px;
+  color: #fff;
+  background: #29176e;
+  border-radius: 0 50px 50px 0;
+  position: relative;
+  z-index: 4;
+}
+
+
+
+/*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
 #preloader {
@@ -11322,7 +11401,7 @@ body.sidebar-toggled footer.sticky-footer {
     transform: rotate(360deg);
   }
 }
-.img-tumbnail-container {
+.img-thumbnail-container {
   border: 1px solid black;
   min-height: 160px;
   min-width: 100%;
@@ -11331,7 +11410,6 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 .team-img {
-  padding: 1%;
   border: 1px solid black;
   max-height: 160px;
   max-width: 100%;
