--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,15 @@ h1, h2, h3, h4, h5, h6 {
   visibility: visible;
   opacity: 1;
 }
-
+ /*--------------------------------------------------------------
+# Card for communication arts
+--------------------------------------------------------------*/
+@media (min-width: 768px) {
+  .h-md-100 { height: 100vh; }
+}
+.btn-round { border-radius: 30px; }
+.bg-indigo { background: indigo; }
+.text-cyan { color: #35bdff; }
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
@@ -90,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #262626;
+  background: #ffc107d5;
   font-size: 14px;
   padding: 0;
   color: rgba(255, 255, 255, 0.8);
@@ -416,41 +424,135 @@ h1, h2, h3, h4, h5, h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 0px 0; /*60 default for vertical sepatation.*/
   overflow: hidden;
 }
 
 .section-bg {
   background-color: #29176e26;
+    background-color: #29176e26;
 }
-
+.intro-bg {
+  background-color: #ffc107;
+}
 .section-title {
-  padding-bottom: 30px;
+  padding-bottom: 0px;
+  padding-top: 30px;
 }
 .section-title h2 {
   font-size: 32px;
+  font-weight: 500;
+  margin-bottom: 0px;
+  padding-bottom: 50px;
+  font-family: "Poppins", sans-serif;
+  color: #635551;
+  padding-top:20px
+}
+
+.section-title h1 {
+  font-size: 50px;
+  font-weight: 500;
+  margin-bottom: -10px;
+  padding-bottom: 0;
+  font-family: "Poppins", sans-serif;
+  color: #635551;
+}
+.section-title p {
+  font-size: 20px;
   font-weight: 500;
   margin-bottom: 20px;
   padding-bottom: 0;
   font-family: "Poppins", sans-serif;
   color: #635551;
 }
-.section-title p {
-  margin-bottom: 0;
+.clearfix img {
+  width: 600px;
+  height: 670px;
+  margin-top:-30px
 }
+.bi-chevron-compact-down {
+  content: "\f279";
+  font-size: 55px;
+  color:white; 
+  text-align: center;
+}
+.size img{ /*trophy img resize*/
+width:auto;
+height:21.5%;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+  margin-left: 30px;
+  padding: 10px;
+  font-size: 20px;
+  width:26.5%;
+}
+.font p{
+  font-size: 18px;
+    font-weight: 400;
+}
+ul{
+    display:inline-block;
+    text-align: left;
+    list-style: inside;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    padding-bottom: 0;
+    font-family: "Poppins", sans-serif;
+    color: #635551;
+  }
+  .li li {
+    margin-left:30px
+  }
 
+.logo-size img {
+  width:90%;
+  height:90%;
+}
+.first img {
+  width: 100%;
+  height: auto;
+  position: relative;
+  bottom: 30px;
+}
+.achievement { /*button for achievement */
+  color: #0d6efd;
+  background-color: #fff;
+  margin-left: 100px;
+  padding: 20px;
+  font-size: 24px;
+  width: 20%;
+  font-weight: 400;
+  height: auto;
+  border-color: #fff;
+}
+.inter img {
+  width: 50%;
+  height: 50%;
+}
+.lead  img { /*Leadership & interview */
+  height: 35%;
+  width: 50%;
+}
+.butt {
+  width:100%;
+}
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
 .breadcrumbs {
-  padding: 15px 0;
-  background: #f4f2f2;
-  margin-bottom: 40px;
-  margin-top: 25px;
+  padding: 0px 0;
+  /* background: #f4f2f2; */
+  margin-bottom: 0px; /*40 25*/
+  margin-top: 0px;
 }
 .breadcrumbs h2 {
   font-size: 28px;
   font-weight: 500;
+  padding: 15px;
 }
 .breadcrumbs ol {
   display: flex;
@@ -468,6 +570,11 @@ section {
   padding-right: 10px;
   color: #635551;
   content: "/";
+}
+.trophy img {
+  width: 600px;
+  height: 600px;
+
 }
 
 /*--------------------------------------------------------------
@@ -1059,8 +1166,9 @@ section {
   position: relative;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  margin:35px;
 }
-.ourCourses .icon {
+/* .ourCourses .icon {
   position: absolute;
   top: -36px;
   left: calc(50% - 36px);
@@ -1080,17 +1188,17 @@ section {
   color: #fff;
   font-size: 24px;
   line-height: 0;
-}
+} */
 .ourCourses .title {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
   text-transform: uppercase;
 }
-.ourCourses .icon-box:hover .icon {
+/* .ourCourses .icon-box:hover .icon {
   background: #fff;
   border: 2px solid #29176e;
-}
+} */
 .ourCourses .icon-box:hover .icon i {
   color: #29176e;
 }
