--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-  background: #262626;
+  background: #ffc107d5;
   font-size: 14px;
   padding: 0;
   color: rgba(255, 255, 255, 0.8);
