--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-/* body * {
+ /* body * {
   outline: 1px solid red;
-} */
+}   */
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -467,7 +467,7 @@ section {
 }
 .clearfix img {
   width: 600px;
-  height: 670px;
+  height: 690px;
   margin-top:-30px
 }
 .bi-chevron-compact-down {
@@ -477,17 +477,17 @@ section {
   text-align: center;
 }
 .size img{ /*trophy img resize*/
-width:auto;
-height:21.5%;
+width:50%;
+height:auto;
 }
 .btn-primary {
   color: #fff;
   background-color: #0d6efd;
   border-color: #0d6efd;
-  margin-left: 30px;
+  margin-left: 0px;
   padding: 10px;
   font-size: 20px;
-  width:26.5%;
+  width: 25.5%;
 }
 .font p{
   font-size: 18px;
@@ -532,13 +532,36 @@ ul{
 .inter img {
   width: 50%;
   height: 50%;
+  margin-top:0px
 }
 .lead  img { /*Leadership & interview */
-  height: 35%;
+  height: auto;
   width: 50%;
+  margin-top:0px
 }
 .butt {
   width:100%;
+}
+.section-title h4 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+    font-family: "Poppins", sans-serif;
+    color: #635551;
+    padding-top: 0px;
+}
+.flag img {
+  width: 50%;
+  height: auto;
+  margin-top: 0px;
+}
+.booking h4{ /* Outer bg with button */
+  background-color: #0d6efd;
+  font-family: "Poppins", sans-serif;
+  color:white;
+  padding: 65px;
+  font-size: 50px;
 }
 /*--------------------------------------------------------------
 # Breadcrumbs
